Began Server Process Implementation